--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17"
+    },
+    "dependencies": {
+        "js-cookie": "^2.2.1",
+        "laravel-echo": "^1.8.0",
+        "socket.io": "^2.3.0",
+        "socket.io-client": "^2.3.0",
+        "vue-chat-scroll": "^1.4.0",
+        "vue-timeago": "^5.1.2",
+        "webrtc-adapter": "^7.6.3"
     }
 }
